WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256426
Correct typo in Document::createProcessingInstruction exception
https://bugs.webkit.org/show_bug.cgi?id=256426
Summary
Correct typo in Document::createProcessingInstruction exception
Anne van Kesteren
Reported
2023-05-06 23:05:41 PDT
Tiny oversight from
bug 256385
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-06 23:06:14 PDT
<
rdar://problem/109000003
>
Anne van Kesteren
Comment 2
2023-05-06 23:18:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13546
EWS
Comment 3
2023-05-07 00:35:28 PDT
Committed
263772@main
(be86bca8e67b): <
https://commits.webkit.org/263772@main
> Reviewed commits have been landed. Closing PR #13546 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug