Correct typo in Document::createProcessingInstruction exception https://bugs.webkit.org/show_bug.cgi?id=256426 rdar://109000003

Reviewed by Chris Dumez.

Correct minor oversight of dcf5f162b4888136d70d4eb5e74c6c3edd211590.

* LayoutTests/fast/dom/qualified-name-validation-expected.txt:
* LayoutTests/fast/dom/qualified-name-validation.html:
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::createProcessingInstruction):

Canonical link: https://commits.webkit.org/263772@main